--- a/L/04DataRepresentation.tex
+++ b/L/04DataRepresentation.tex
@@ -48,7 +48,7 @@
   \item And those who don't.
   \end{itemize}
   \item If you don't get the joke, refresh your concepts of Binary
-  numbers.\fromSlide<4->{\footnote{Source of the joke unknown.} }
+  numbers.$_{Source\ of\ the\ joke\ not\ known.}$
   \end{itemize}
 }
 
