--- a/L/title.tex
+++ b/L/title.tex
@@ -1,5 +1,5 @@
-\author[karkare]{Amey Karkare \\ \url{karkare@cse.iitk.ac.in}}
-\date[IoT]{\scalebox{0.1}{\includegraphics{iitklogo.epsi}} }
-\institute[CSE, IITK]{Department of CSE, IIT Kanpur}
-\title[CS664]{IoT System Design}
+\author[karkare]{\bf \ \\ Amey Karkare \\ \url{karkare@cse.iitk.ac.in}}
+\date[IoT]{\scalebox{0.2}{\includegraphics{iitklogo.epsi}} }
+\institute[CSE, IITK]{\bf Department of CSE, IIT Kanpur}
+\title[CS664]{\psframebox[fillcolor=white,fillstyle=solid,linestyle=none]{\bf IoT System Design}}
 
